- asynchronous dynamic profile lookup dispatch and polling-based update - bug fixes and performance improvements